# agerent

./: main.py  test_chinese_font.py  test_components.py  test_matplotlib_fonts.py  test_output_view.py  test_settings_status.py
AxaltyX/: README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_basic_functionality.py  test_bridge.py  test_panels.py  test_statistical_modules.py  validate_advanced_modules.py  validate_integration.py
AxaltyX/src/axaltyx_bridge/: controller.py  registry.py
AxaltyX/src/axaltyx_bridge/commands/: commands.py  history.py
AxaltyX/src/axaltyx_bridge/events/: event_bus.py  worker.py
AxaltyX/src/axaltyx_bridge/signals/: bridge_signals.py
AxaltyX/src/axaltyx_bridge/slots/: analysis_slots.py  chart_slots.py  data_slots.py  ui_slots.py
AxaltyX/src/axaltyx_core/: core_engine.py
AxaltyX/src/axaltyx_core/anova/: anova.py
AxaltyX/src/axaltyx_core/bayesian/: bayesian.py
AxaltyX/src/axaltyx_core/causal_inference/: causal.py
AxaltyX/src/axaltyx_core/clustering/: clustering.py
AxaltyX/src/axaltyx_core/correlation/: correlation.py
AxaltyX/src/axaltyx_core/correspondence/: correspondence.py
AxaltyX/src/axaltyx_core/crosstab/: crosstab.py
AxaltyX/src/axaltyx_core/data_management/: __init__.py  io.py  manipulation.py
AxaltyX/src/axaltyx_core/descriptive/: stats.py
AxaltyX/src/axaltyx_core/discriminant/: discriminant.py
AxaltyX/src/axaltyx_core/factor_analysis/: factor_analysis.py
AxaltyX/src/axaltyx_core/frequency/: frequency.py
AxaltyX/src/axaltyx_core/hlm/: hlm.py
AxaltyX/src/axaltyx_core/log_linear/: log_linear.py
AxaltyX/src/axaltyx_core/machine_learning/: ml.py
AxaltyX/src/axaltyx_core/means_comparison/: means.py
AxaltyX/src/axaltyx_core/meta_analysis/: meta_analysis.py
AxaltyX/src/axaltyx_core/missing_data/: missing.py
AxaltyX/src/axaltyx_core/network/: network.py
AxaltyX/src/axaltyx_core/nonparametric/: nonparametric.py
AxaltyX/src/axaltyx_core/pca/: pca.py
AxaltyX/src/axaltyx_core/probit/: probit.py
AxaltyX/src/axaltyx_core/regression/: regression.py
AxaltyX/src/axaltyx_core/reliability/: reliability.py
AxaltyX/src/axaltyx_core/sampling/: sampling.py
AxaltyX/src/axaltyx_core/sem/: sem.py
AxaltyX/src/axaltyx_core/spatial/: spatial.py
AxaltyX/src/axaltyx_core/survival/: survival.py
AxaltyX/src/axaltyx_core/t_test/: t_tests.py
AxaltyX/src/axaltyx_core/text_mining/: text_mining.py
AxaltyX/src/axaltyx_core/time_series/: time_series.py
AxaltyX/src/axaltyx_gui/chart_view/: __init__.py  chart_widget.py
AxaltyX/src/axaltyx_gui/custom_widgets/: __init__.py  variable_selector.py
AxaltyX/src/axaltyx_gui/dialogs/: anova_dialogs.py  base_dialog.py  clustering_dialog.py  correlation_dialog.py  crosstabs_dialog.py  descriptive_dialog.py  factor_dialog.py  file_dialogs.py  frequency_dialog.py  nonparametric_dialogs.py  regression_dialogs.py  reliability_dialog.py  settings_dialog.py  survival_dialogs.py  t_test_dialogs.py
AxaltyX/src/axaltyx_gui/main_window/: main_window.py  menu_bar.py
AxaltyX/src/axaltyx_gui/output_view/: __init__.py  output_widget.py  result_table.py
AxaltyX/src/axaltyx_gui/panels/: __init__.py  navigation_panel.py  property_panel.py
AxaltyX/src/axaltyx_gui/settings/: __init__.py  app_settings.py  theme_manager.py
AxaltyX/src/axaltyx_gui/splash/: splash_screen.py
AxaltyX/src/axaltyx_gui/statusbar/: __init__.py  status_bar.py
AxaltyX/src/axaltyx_gui/tab_system/: data_tab.py  output_tab.py  syntax_tab.py  tab_widget.py  variable_tab.py
AxaltyX/src/axaltyx_gui/table_view/: model.py
AxaltyX/src/axaltyx_gui/toolbar/: toolbar.py
AxaltyX/src/axaltyx_i18n/: __init__.py  manager.py
AxaltyX/src/axaltyx_i18n/locales/: en_US.json  ja_JP.json  zh_CN.json
AxaltyX/src/axaltyx_plot/: plot_engine.py
AxaltyX/src/axaltyx_plot/advanced/: advanced_charts.py
AxaltyX/src/axaltyx_plot/basic/: charts.py
AxaltyX/src/axaltyx_plot/export/: exporter.py
AxaltyX/src/axaltyx_plot/interactive/: interactive_charts.py
(+34 files in other folders)
